testcases/semantic/valid/exit1.rs
fn main() {
    let b: i32 = 3 + 1;
    exit(b)
}
