testcases/semantic/invalid/if_expr_without_else.rs
fn main() {
    let b: i32 = if (true) {
        3
    };
    exit(0);
}
